# mynmpc

./: CMakeLists.txt  LICENSE  README.md  package.xml
docs/: annotated.html  class_m_p_c-members.html  class_m_p_c.html  class_m_p_c__coll__graph.map  class_m_p_c__coll__graph.md5  class_m_p_c__inherit__graph.map  class_m_p_c__inherit__graph.md5  class_model-members.html  class_model.html  class_model__coll__graph.map  class_model__coll__graph.md5  class_model__inherit__graph.map  class_model__inherit__graph.md5  class_prox_q_p-members.html  class_prox_q_p.html  class_prox_q_p__coll__graph.map  class_prox_q_p__coll__graph.md5  class_prox_q_p__inherit__graph.map  class_prox_q_p__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f6f6ba4cd78953bd7695dbb691dd1fc3.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  md__r_e_a_d_m_e.html  menudata.js  model_8h_source.html  mpc_8h_source.html  pages.html  proxqp_8h_source.html  (+22 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
include/mynmpc/: model.h  mpc.h  proxqp.h  structs.h  utils.h
include/mynmpc/models/: bike.h  obs.h  r2d2.h  rosbot.h
include/mynmpc/mpc/: mpc_bike.h  mpc_obs.h  mpc_r2d2.h  mpc_rosbot.h
launch/: simulation.launch.py
src/: controller.cpp  model.cpp  mpc.cpp  proxqp.cpp  utils.cpp
src/obstacles/: obstacle.cpp  obstacle1.cpp  obstacle2.cpp
